WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23621
[GTK] Fix scrollbars mis-positioning.
https://bugs.webkit.org/show_bug.cgi?id=23621
Summary
[GTK] Fix scrollbars mis-positioning.
Xan Lopez
Reported
2009-01-29 09:10:06 PST
Patch attached.
Attachments
Fix scrollbars mispositioning.
(2.30 KB, patch)
2009-01-29 09:11 PST
,
Xan Lopez
no flags
Details
Formatted Diff
Diff
Second try
(3.18 KB, patch)
2009-02-04 07:47 PST
,
Xan Lopez
zecke
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2009-01-29 09:11:57 PST
Created
attachment 27149
[details]
Fix scrollbars mispositioning.
Xan Lopez
Comment 2
2009-02-04 07:47:40 PST
Created
attachment 27313
[details]
Second try
Holger Freyther
Comment 3
2009-02-04 10:36:35 PST
Alternatively you can remove the entire if () {} and always set the value. Currently we would call gtk_adjustment_changed twice...
Xan Lopez
Comment 4
2009-02-04 10:55:14 PST
(In reply to
comment #3
)
> Alternatively you can remove the entire if () {} and always set the value. > Currently we would call gtk_adjustment_changed twice... >
It's not the same function. One is gtk_adjustment_changed, and the other gtk_adjustment_VALUE_changed. The first is used when the adj parameters change, the second when the actual value changes.
Holger Freyther
Comment 5
2009-02-06 17:06:55 PST
M WebCore/ChangeLog M WebCore/platform/gtk/ScrollViewGtk.cpp
r40742
= 1d0eb8fee689dbb9d11e2d5d68b75546957549f1 (git-svn)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug